# vsm

./: .gitignore  .gitlab-ci.yml  AUTHORS  Dockerfile  NOTICE  README.md  master.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  slave.py
deploy/: Dockerfile_brayns_aws_wrapper  mount_s3.sh
vsm/: __init__.py  allocator.py  application.py  auth_helper.py  authenticator.py  aws_allocator.py  db.py  db_dynanamo.py  db_init.py  db_pgsql.py  logger.py  master.py  scheduler.py  script_list.py  sentry.py  settings.py  slave.py  unicore_allocator.py  unicore_handler.py  unicore_scheduler.py  utils.py  websocket_proxy.py
