[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vsm"
dynamic = ["version"]
description = "Visualization Software Manager"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE.md" }
authors = [
    { "name" = "Blue Brain Project, EPFL"}
]
dependencies = ["aiohttp", "aiohttp-middlewares", "asyncpg", "boto3"]

[project.optional-dependencies]
dev = ["mypy", "pytest", "ruff"]

[project.urls]
"Homepage" = "https://bbpgitlab.epfl.ch/viz/brayns/vsm"

[project.scripts]
vsm_master = "vsm:run_master"
vsm_slave = "vsm:run_slave"

[tool.setuptools.packages.find]
include = ["vsm*"]

[tool.setuptools.dynamic]
version = { attr = "vsm.version.VERSION" }

[tool.mypy]
disable_error_code = "import-untyped"

[tool.ruff]
lint.ignore = ["E501"]
line-length = 119
